[tool.poetry]
name = "try"
version = "0.1.0"
description = "trying out numpy as a tool in data science"
authors = ["yuenfu001 <liuyuenfu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
